--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,17 +14,10 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        python-version: ["3.11"]
     steps:
       - uses: actions/checkout@v4
       - name: Get tags
         run: git fetch --tags origin -f
-
-      - name: Install the latest version of uv
-        uses: astral-sh/setup-uv@v4
-        with:
-          enable-cache: true
-      - run: uv sync
 
       - uses: actions/setup-node@v4
         with:
@@ -55,4 +48,4 @@ jobs:
           version: 3.x
           repo-token: ${{ secrets.GITHUB_TOKEN }}
 
-      - run: uv run task -p all_for_ci
+      - run: task -p all_for_ci
