--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -1,41 +1,29 @@
+---
 version: '3'
-
-vars:
-  TARGET_DIRS: ./garoh
 
 tasks:
   default:
-    deps: [all_for_ci, typo_check]
+    deps: [format, lint, test]
 
-  all_for_ci:
-    deps: [lint_node]
+  format:
+    cmds:
+      - pnpm format
 
-  lint_node:
-    deps: [pnpm_test]
+  lint:
+    cmds:
+      - pnpm lint
 
-
-  yamllint:
+  lint_shell:
     cmds:
       - >-
         find . \( -name node_modules -o -name .venv \) \
           -prune -o -type f -name '*.yml' -print \
-        | xargs yamllint --no-warnings -c .yamllint.yml
+        | xargs shellcheck
 
-  ruff:
-    cmds:
-      - ruff format --respect-gitignore --check
-      - ruff check --respect-gitignore
-
-  pnpm_test:
-    cmds:
-      - pnpm test
-
-  shellcheck:
-    cmds:
-      - >-
-        find {{ .TARGET_DIRS }} ./shellscripts -type f \
-          | grep \.sh$ | xargs shellcheck
-
-  typo_check:
+  lint_typos:
     cmds:
       - typos -V && typos
+
+  test:
+    cmds:
+      - pnpm test
