--- a/package.json
+++ b/package.json
@@ -6,14 +6,21 @@
   "name": "web_3d_ball",
   "scripts": {
     "preinstall": "npx only-allow pnpm",
-    "format": "biome format --write",
-    "test:biome": "biome check",
-    "test:md": "markdownlint *.md",
-    "test": "run-s test:biome test:md"
+    "format": "run-s format:biome format:markdownlint format:toml",
+    "format:biome": "biome check --write",
+    "format:markdownlint": "markdownlint -f ./*.md doc/*.md",
+    "format:toml": "taplo format *.toml",
+    "test": ":",
+    "lint": "run-s lint:biome lint:md lint:toml",
+    "lint:biome": "biome check",
+    "lint:md": "npx markdownlint *.md docs/*.md",
+    "lint:toml": "taplo format --check *.toml"
   },
   "version": "1.0.0",
   "devDependencies": {
+    "@taplo/cli": "^0.7.0",
     "@biomejs/biome": "1.9.4",
+    "markdown-it": "^14.1.0",
     "markdownlint-cli": "^0.44.0",
     "npm-run-all2": "^7.0.2"
   },
