--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -3,22 +3,23 @@ version: '3'
 
 tasks:
   default:
-    deps: [format, lint, test]
+    cmds:
+      - task: format
+      - task: lint_and_test
+
+  lint_and_test:
+    deps: [lint, test]
 
   format:
     cmds:
       - pnpm format
 
   lint:
+    deps: [lint_pnpm]
+
+  lint_pnpm:
     cmds:
       - pnpm lint
-
-  lint_shell:
-    cmds:
-      - >-
-        find . \( -name node_modules -o -name .venv \) \
-          -prune -o -type f -name '*.yml' -print \
-        | xargs shellcheck
 
   lint_typos:
     cmds:
